@@ -9,5 +9,5 @@ reference data which is normally managed using the
 .. tip::
 
    From a country you can :guilabel:`Open related records` and select
-   :guilabel:`Zip` to find a list of all the `Postal Codes <model-country.zip>`
-   for that country.
+   :guilabel:`Postal Codes` to find a list of all the `Postal Codes
+   <model-country.postal_code>` for that country.
